--- a/index.html
+++ b/index.html
@@ -65,6 +65,21 @@
         </tbody>
     </table>
     <h4><u>Galeri Tanaman Organik</u></h4>
-
+    <figure>
+        <img src="https://example.com/tomat.jpg" alt="Tanaman Tomat Organik" width="200"/>
+        <figcaption>Gambar 1: Tanaman Tomat Organik</figcaption>
+    </figure>
+<br/>
+    <h4><u>Video Berkebun Organik</u></h4>
+    <iframe 
+        width="560" 
+        height="315" 
+        src="https://www.youtube.com/embed/3FbxZGqVU9I?si=jUoyMq83Myx38gyU" 
+        title="YouTube video player" 
+        frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        referrerpolicy="strict-origin-when-cross-origin"
+        allowfullscreen>        
+    </iframe>
 </body>
 </html>
