Tambah Foto Seadanya

--- a/index.html
+++ b/index.html
@@ -62,12 +62,17 @@
                 <td>Jahe</td>
                 <td>Tidak ada</td>
             </tr>
+        <!--Tambah lebih banyak tanaman-->
         </tbody>
     </table>
     <h4><u>Galeri Tanaman Organik</u></h4>
+    <!--Sesuaikan foto dengan isi tabel-->
     <figure>
-        <img src="https://example.com/tomat.jpg" alt="Tanaman Tomat Organik" width="200"/>
-        <figcaption>Gambar 1: Tanaman Tomat Organik</figcaption>
+        <img id="tomat" src="images/Tomat.jpeg" alt="Foto Tomat" width="200">
+        <img id="cabai" src="images/CabeBesar.jpeg" alt="Foto Cabai Merah Besar" width="200">
+        <img id="jeruk" src="images/JerukSambal.jpeg" alt="Foto Jeruk Sambal" width="200">
+        <img id="bunga" src="images/Bunga.jpeg" alt="Foto Bunga Pukul Sembilan" width="200">
+        <img id="tanaman_hias" src="images/TanamanHias.jpeg" alt="Foto Tanaman Hias" width="200">
     </figure>
 <br/>
     <h4><u>Video Berkebun Organik</u></h4>
@@ -81,5 +86,7 @@
         referrerpolicy="strict-origin-when-cross-origin"
         allowfullscreen>        
     </iframe>
+<hr/>
+
 </body>
 </html>
