--- a/index.html
+++ b/index.html
@@ -4,11 +4,69 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kebun RayNa</title>
+    <style>
+        .container {
+            display:flex;
+            flex-wrap: wrap;
+        }
+        body {
+            background-color: rgb(246, 246, 142);
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            line-height: 1.6;
+        }
+        h1, h3, h4 {
+            color:#a348b0eb;
+        }
+        li {
+            text-align: justify;
+            font-size: 20px;
+        }
+        p {
+            text-align: justify;
+            font-size: 20px;
+        }
+        blockquote {
+            font-style: italic;
+            font-size: 28px;
+            color: #555;
+            border-left: 4px solid #a348b0eb;
+            margin: 20px 0;
+            padding-left: 15px;
+        }
+        mark {
+            background-color: rgb(30, 255, 0);
+            font-weight: bold;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-bottom: 20px;
+        }
+        th, td {
+            padding: 10px;
+            text-align: left;
+        }
+        th {
+            background-color:#a348b0eb;
+        }
+        tr { 
+            background-color: #f2f2f2;
+        }
+        figure {
+            display: flex;
+            gap: 10px;
+            flex-wrap: wrap;
+        }
+        iframe {
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
     <h1>Panduan Berkebun Secara Organik</h1>
 <hr/>
-    <h3>Apa itu Berkebun Organik?</h3>
+    <h2>Apa itu Berkebun Organik?</h2>
     <ul>
         <li><b>Berkebun Organik</b> adalah metode menanam tanaman tanpa bahan kimia sintetis.</li>
         <li>Teknik ini lebih ramah lingkungan dan <u>berkelanjutan.</u></li>
@@ -18,7 +76,7 @@
         <li><i>Catatan : Hasil panen tergantung pada sistem perawatan tanaman dan kondisi tanah.</i></li>
     </ul>
 <hr/>
-    <h3>Prinsip dan Informasi</h3>
+    <h2>Prinsip dan Informasi</h2>
     <blockquote>Prinsip budidaya berbasis pengendalian hama, penggunaan pupuk kompos, pengelolaan sumberdaya yang terpadu, dan memperhatikan kelestarian lingkungan perlu diterapkan dalam konsep pembangunan sektor pertanian dapat layak secara ekonomi, sosial, dan berkelanjutan pada masa mendatang (Wihardjaka, 2018).</blockquote>
     <p>Prinsip Dasar Pertanian Organik menurut <abbr title="International Federation of Organic Agriculture Movements">IFOAM</abbr> (1992) dalam budidaya tanaman organik haruslah memenuhi kriteria-kriteria sebagai berikut:</p>
     <ol>
@@ -34,7 +92,7 @@
             <p>Dalam pertanian organik, penggunaan semua pestisida buatan (kimia) tidak diperbolehkan, kecuali yang telah diizinkan dan terdaftar pada IFOAM. Namun, penggunaan pestisida hayati diperbolehkan dalam praktik pertanian organik.</p>
     </ol>
 <hr/>
-    <h3>Contoh Tanaman Organik</h3>
+    <h2>Contoh Tanaman Organik</h2>
     <table border="1">
         <thead>
             <tr>
@@ -50,8 +108,8 @@
                 <td>Kuning</td>
             </tr>
             <tr>
-                <td>Bayam</td>
-                <td>Hijau</td>
+                <td>Cabai</td>
+                <td>Putih</td>
             </tr>
             <tr>
                 <td rowspan="2">Rempah</td>
@@ -62,20 +120,18 @@
                 <td>Jahe</td>
                 <td>Tidak ada</td>
             </tr>
-        <!--Tambah lebih banyak tanaman-->
         </tbody>
     </table>
-    <h4><u>Galeri Tanaman Organik</u></h4>
-    <!--Sesuaikan foto dengan isi tabel-->
+    <h3><u>Galeri Tanaman Organik</u></h3>
     <figure>
-        <img id="tomat" src="images/Tomat.jpeg" alt="Foto Tomat" width="200">
-        <img id="cabai" src="images/CabeBesar.jpeg" alt="Foto Cabai Merah Besar" width="200">
-        <img id="jeruk" src="images/JerukSambal.jpeg" alt="Foto Jeruk Sambal" width="200">
-        <img id="bunga" src="images/Bunga.jpeg" alt="Foto Bunga Pukul Sembilan" width="200">
-        <img id="tanaman_hias" src="images/TanamanHias.jpeg" alt="Foto Tanaman Hias" width="200">
+        <img id="tomat" src="images/Tomat.jpeg" alt="Foto Tomat" width="270">
+        <img id="cabai" src="images/CabeBesar.jpeg" alt="Foto Cabai Merah Besar" width="270">
+        <img id="jeruk" src="images/JerukSambal.jpeg" alt="Foto Jeruk Sambal" width="270">
+        <img id="bunga" src="images/Bunga.jpeg" alt="Foto Bunga Pukul Sembilan" width="270">
+        <img id="tanaman_hias" src="images/TanamanHias.jpeg" alt="Foto Tanaman Hias" width="270">
     </figure>
 <br/>
-    <h4><u>Video Berkebun Organik</u></h4>
+    <h3><u>Video Berkebun Organik</u></h3>
     <iframe 
         width="560" 
         height="315" 
@@ -87,6 +143,22 @@
         allowfullscreen>        
     </iframe>
 <hr/>
-
+Referensi artikel :
+<address>
+    <a href="https://www.hondapowerproducts.co.id/id/berita-informasi/artikel/apa-itu-pertanian-organik#:~:text=Persyaratan%20Prinsip%20Dasar%20Pertanian%20Organik%20menurut%20IFOAM,tanaman%20organik%20haruslah%20memenuhi%20kriteria%2Dkriteria%20sebagai%20berikut:"
+        alt="Pertanian Organik: Konsep, Prinsip, dan Manfaatnya">
+        Pertanian Organik: Konsep, Prinsip, dan Manfaatnya
+    </a>
+    <br/>
+    <a href="https://distan.bulelengkab.go.id/informasi/detail/berita/pengolahan-pupuk-organik-untuk-lahan-pertanian-35#:~:text=Pupuk%20organik%20merupakan%20pupuk%20yang,alam%20dan%20menjaga%20keseimbangan%20ekosistem."
+        alt="pengolahan-pupuk-organik-untuk-lahan-pertanian">
+        Pengolahan Pupuk Organik untuk Lahan Pertanian
+    </a>
+    <br/>
+    <a href="https://www.ifoam.bio/why-organic/shaping-agriculture/four-principles-organic#:~:text=The%20Principles%20of%20Organic%20Agriculture,%2C%20Ecology%20%2C%20Fairness%20and%20Care."
+        alt="Prinsip-Prinsip Pertanian Organik">
+        Prinsip-Prinsip Pertanian Organik
+    </a>
+</address>
 </body>
 </html>
