--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         h1, h3, h4 {
             color:#a348b0eb;
         }
+        h1 {
+            text-align: center;
+            font-size: 36px;
+        }
         li {
             text-align: justify;
             font-size: 20px;
